# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  emails.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
data/: emails.py
server/: app.py
tests/: test_env.py
