[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env-v2"
version = "2.0.0"
description = "Sequential email triage OpenEnv environment v2"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "openai>=1.30.1",
    "requests>=2.32.2",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "server*"]

[tool.openenv]
name = "email-triage-env-v2"
version = "2.0.0"
tasks = ["classify_urgency", "triage_and_route", "inbox_zero"]
entry_point = "server.app:app"
